--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.81.0",
-    "lottie-react-native": "^7.3.2",
     "react": "19.1.0",
-    "react-native": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native": "0.81.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
