--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/drawer": "^7.5.7",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native-stack": "^7.3.25",
     "react": "19.1.0",
